# Scavenge

Pruebas Calificadas/PE/: 2024-I-pe-p1.cpp  2024-I-pe-p2.cpp  2024-I-pe-p3.cpp  2024-II-pe-p1.cpp  2024-II-pe-p2.cpp  2024-II-pe-p3.cpp  2025-I-pe-p1.cpp  CMakeLists.txt  main.cpp  mogollon-sebastian-pe-p1.cpp
