cmake_minimum_required(VERSION 3.31)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(2024-I-pe-p1 2024-I-pe-p1.cpp)
add_executable(2024-I-pe-p2 2024-I-pe-p2.cpp)
add_executable(2024-I-pe-p3 2024-I-pe-p3.cpp)

add_executable(2024-II-pe-p1 2024-II-pe-p1.cpp)
add_executable(2024-II-pe-p2 2024-II-pe-p2.cpp)
add_executable(2024-II-pe-p3 2024-II-pe-p3.cpp)

add_executable(2025-I-pe-p1 2025-I-pe-p1.cpp)
